fix spacing issues with search bar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -139,5 +139,10 @@ main {
     .brand-logo {
         margin-left: 0;
     }
+}
 
+@media screen and (max-width: 382px) {
+    .brand-logo {
+        font-size: 2rem;
+    }
 }
